--- a/pagina-de-vendas.html
+++ b/pagina-de-vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Minha Página de Vendas</h1>
+    <p>Vendas = R$5.000.000,00</p>
     <a href="index.html">Voltar Home</a>
 </body>
 </html>
