Adicionado novo post no blog

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Blog</h1>
-     <h2>Post Teste</h2>
-   
+     <h2>Post Teste 1</h2>
+     <h2>Post Teste 2</h2>
 </body>
 </html>
