--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Minha Home</h1>
     <a href="pagina-de-vendas.html">Ir para Vendas</a>
+    <a href="Blogs.html">Ir para Blog</a>
 </body>
 </html>
